# ApiPractice

./: .env  .pre-commit-config.yaml  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: github-actions-deploy-linter-tests.yml
authentication/: .env  pyproject.toml
config-vault/: config.json
migrations/: env.py
register_app/: pyproject.toml
register_app/migrations/: env.py
register_app/settings/: db.py  depends.py  models.py  settings.py
register_app/src/: models.py  router.py  utils.py
src/: router.py  schemas.py  service.py
src/authorization/: depends.py  models.py  repository.py  router.py  schemas.py  service.py
src/broker/: service.py
src/password/: depends.py  models.py  repository.py  router.py  schemas.py  service.py
src/registration/: depends.py  models.py  repository.py  router.py  service.py  utils.py  vault.py
src/settings/: db.py  depends.py  exceptions.py  models.py  repository.py  service.py  settings.py
src/vault/: repository.py  service.py
tests/: conftest.py  pytest.ini
tests/authorization/: conftest.py  test_auth.py  test_authorization_router.py
tests/integration/: conftest.py  test_authorization_router.py
tests/registration/: conftest.py  test_register.py  test_registration_router.py
user/: .env  alembic.ini  main.py  pyproject.toml
user/crud/: auth_crud.py  user_crud.py
user/database/: database.py
user/migrations/: env.py
user/models/: token_models.py  user_model.py
user/schemas/: auth_schemas.py  user_schemas.py
user/utils/: user_utils.py
vault/: README.md
vault/config/: vault-config.json
