[tool.poetry]
name = "Authorization microservice"
version = "0.1"
description = "Authorization microservice"
authors = ["LedxDeliveryFlopp <korstim18@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.25"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.9"
asyncpg = "^0.29.0"
fastapi = "^0.109.2"
uvicorn = "^0.27.0.post1"
alembic = "^1.13.1"
email-validator = "^2.1.0.post1"
passlib = "^1.7.4"
pydantic-settings = "^2.1.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
httpx = "^0.26.0"
pytest = "^8.0.0"
hvac = "^2.1.0"
pytest-mock = "^3.12.0"
pytest-env = "^1.1.3"
pytest-asyncio = "^0.23.5.post1"
mock-alchemy = "^0.2.6"
pytest-mock-resources = "^2.10.1"
aio-pika = "^9.4.1"
mypy = "^1.9.0"
pre-commit = "^3.7.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.2.1"
flake8-async = "^22.11.14"
pre-commit = "^3.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
exclude = ["usr", "venv", "tmp", "var"]
line-length = 88
indent-width = 4
target-version = "py311"


[tool.pytest.ini_options]
asyncio_mode = "auto"
env_files = ["tests/.env"]
pythonpath = [".", "src"]
